# forge

./: .gitignore  CONTRIBUTING.md  DESKTOP_SECRETS_OAUTH_DESIGN.md  GUILD_CLI_README.md  GUILD_INFRA_EVENTS_PROPOSAL.md  README.md  litellm-deps-template.yaml
docs/: AGENT_NEEDS_DESIGN.md  FILE_API_GUILD_SPEC_FLOW.md  LOCAL_DEBUG.md  MODEL_FIT_DESIGN.md  README.md  WS_COMMUNICATION_GUIDE.md  distributed-architecture.md  guild-cli.md
forge-go/: .goreleaser.yaml  (+3 more)
forge-python/: README.md  pyproject.toml
forge-python/src/rustic_ai/forge/: agent_runner.py
forge-python/src/rustic_ai/forge/agents/system/: guild_manager_agent.py
forge-python/src/rustic_ai/forge/messaging/: __init__.py  backend.py  supervisor_backend.py
forge-python/src/rustic_ai/forge/metastore/: manager_client.py
forge-python/tests/: test_forge_api_contract.py  test_forge_integration.py
forge-python/tests/contract/: conftest.py  test_gemstone_id.py
forge-python/tests/rustic_ai/forge/: test_guild_manager_agent.py  test_manager_client.py  test_supervisor_zmq_backend.py
website/: .gitignore  README.md  build-site.wf.js  mkdocs.yml  pyproject.toml
website/docs/: index.md  why-forge.md
website/docs/assets/stylesheets/: theme.css
website/docs/concepts/: agent-model.md  architecture.md  distributed-control-plane.md  guild-model.md  messaging-protocol.md  placement-reconciliation.md
website/docs/features/: agents.md  distributed-scheduling.md  gateway-websockets.md  guilds.md  http-api.md  index.md  messaging.md  model-fit.md  secrets-oauth.md  storage.md  supervision-recovery.md  telemetry.md
website/docs/getting-started/: first-guild.md  installation.md  overview.md  quickstart.md
website/docs/guides/: authoring-guild-specs.md  distributed-deployment.md  model-fit.md  observability.md  running-a-guild.md  securing-secrets.md
website/docs/internals/: control-plane.md  leader-election.md  messaging-backends.md  reconciler-recovery.md  scheduler-placement.md  supervisors.md
website/docs/reference/: cli.md  configuration.md  glossary.md  http-api.md  troubleshooting.md
website/docs/use-cases/: distributed-cluster.md  local-desktop.md  multi-agent-guilds.md
(+195 files in other folders)
