[tool.poetry]
name = "rusticai-forge"
version = "0.1.0"
description = "Python agent wrapper and execution engine for Forge"
packages = [{ include = "rustic_ai", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
pydantic = "*"
redis = "*"
# DO NOT CHANGE THESE TO LOCAL FILE PATHS. Always use package references.
rusticai-core = ">=1.1.0"
rusticai-redis = ">=1.1.0"
psycopg = { version = ">=3.2.0", extras = ["binary"] }
httpx = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
