[project]
name = "rusticai-forge"
version = "0.0.2"
description = "Python agent wrapper and execution engine for Forge"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic>=2.12.5,<3.0.0",
    "redis>=6.4.0,<7.0.0",
    # DO NOT CHANGE THESE TO LOCAL FILE PATHS. Always use package references.
    "rusticai-core>=1.1.0,<2.0.0",
    "rusticai-redis>=1.1.0,<2.0.0",
    "psycopg[binary]>=3.3.3,<4.0.0",
    "httpx>=0.28.1,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "requests>=2.32.5,<3.0.0",
    "ruff>=0.13.1,<0.14.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
